# delorean-db

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/Source/: CMakeLists.txt  Common.hpp  main.cc
Engine/Source/Core/: Column.hpp  Types.hpp
Engine/Source/Memory/: ArenaAllocator.cc  ArenaAllocator.hpp
src/: CMakeLists.txt  deloreandb.cc  main.cc
src/include/deloreandb/: common.hpp  deloreandb.hpp  platform_detect.hpp
src/include/deloreandb/core/: types.hpp
src/include/deloreandb/mem/: arena_alloc.hpp
src/include/deloreandb/system/: cache_info.hpp
src/mem/: arena_alloc.cc
src/system/: CMakeLists.txt
src/system/fallback/: cache_info.cc
src/system/linux/: cache_info.cc
src/system/win/: cache_info.cc
test/: CMakeLists.txt  db_tests.cc
